# translator

./: README.md  translator.cabal
.stack-work/install/x86_64-linux/lts-6.5/7.10.3/flag-cache/: QuickCheck-2.8.2-4a8ff054680a1e6817d7a2f4ce006391  primitive-0.6.1.0-b2a7b9f8d5591c0d4ce7ef238a3217d2  random-1.1-c46cc413d88c0a330b5495d03f0ed464  tf-random-0.5-be1be3a7eeba5ee8baa6cee25a76f884  translator-0.1.0.0-094968700a2369f116629cc87b4bcd14  translator-0.1.0.0-92879b03f09e374c5b1090d5e4d11952  translator-0.1.0.0-cabe137e1a888918a2cc4e46446f98f9
.stack-work/install/x86_64-linux/lts-6.5/7.10.3/lib/x86_64-linux-ghc-7.10.3/translator-0.1.0.0-7Z1wDWZ3VSoEPaDaYBr3lm/: Translator.dyn_hi  Translator.hi
.stack-work/install/x86_64-linux/lts-6.5/7.10.3/pkgdb/: package.cache  translator-0.1.0.0-094968700a2369f116629cc87b4bcd14.conf  translator-0.1.0.0-2810605e3caa371a080bb24c52e684f0.conf  translator-0.1.0.0-703aa5a7ade00be1f2e83ac771080683.conf  translator-0.1.0.0-762e6c4013a1da364a8646ec9266751e.conf  translator-0.1.0.0-83f05e62eb90963e09abfa7052e7b69d.conf  translator-0.1.0.0-92879b03f09e374c5b1090d5e4d11952.conf  translator-0.1.0.0-cabe137e1a888918a2cc4e46446f98f9.conf
src/: Main.hs  Translator.hs
