name:                translator
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/translator#readme
license:             BSD3
license-file:        LICENSE
author:              Li Zhang
maintainer:          zhangli@gwu.edu
copyright:           2016 Li Zhang
category:            Tool
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Translator
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , QuickCheck
  default-language:    Haskell2010
  ghc-options:	       -Wall -fwarn-tabs

executable translator
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >=4.7 && <5
                     , translator
                     , containers
                     , QuickCheck
  default-language:    Haskell2010

